[gd_scene load_steps=7 format=3 uid="uid://ctghttdswbn7c"]

[ext_resource type="Script" path="res://scenes/ui/tower_preview.gd" id="1_yfxcx"]
[ext_resource type="Texture2D" uid="uid://dpvrvvanrieql" path="res://assets/sprites/heart.png" id="2_12yuw"]
[ext_resource type="Resource" uid="uid://6y2rwctvjk3" path="res://data/towers/base_tower.tres" id="2_tfyex"]
[ext_resource type="Texture2D" uid="uid://dniwbkpk5yuf1" path="res://assets/sprites/arrow.png" id="3_hmrk8"]
[ext_resource type="Texture2D" uid="uid://cjsd0oimewuss" path="res://assets/sprites/coins.png" id="4_8gsav"]

[sub_resource type="AtlasTexture" id="AtlasTexture_ls6vc"]
region = Rect2(0, 0, 256, 256)

[node name="TowerPreview" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_yfxcx")
tower = ExtResource("2_tfyex")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2

[node name="TowerSprite" type="TextureRect" parent="PanelContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
texture = SubResource("AtlasTexture_ls6vc")
expand_mode = 4

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Archers"
horizontal_alignment = 1
vertical_alignment = 1

[node name="GridContainer" type="GridContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
columns = 2

[node name="AttackContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2

[node name="AttackIcon" type="TextureRect" parent="PanelContainer/MarginContainer/VBoxContainer/GridContainer/AttackContainer"]
layout_mode = 2
texture = ExtResource("3_hmrk8")
expand_mode = 3

[node name="AttackLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/GridContainer/AttackContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "4"

[node name="SpeedContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2

[node name="SpeedIcon" type="TextureRect" parent="PanelContainer/MarginContainer/VBoxContainer/GridContainer/SpeedContainer"]
layout_mode = 2
texture = ExtResource("3_hmrk8")
expand_mode = 3

[node name="SpeedLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/GridContainer/SpeedContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "4"

[node name="CostContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2

[node name="CostIcon" type="TextureRect" parent="PanelContainer/MarginContainer/VBoxContainer/GridContainer/CostContainer"]
layout_mode = 2
texture = ExtResource("4_8gsav")
expand_mode = 3

[node name="CostLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/GridContainer/CostContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "4"

[node name="HealthContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2

[node name="HealthIcon" type="TextureRect" parent="PanelContainer/MarginContainer/VBoxContainer/GridContainer/HealthContainer"]
layout_mode = 2
texture = ExtResource("2_12yuw")
expand_mode = 3

[node name="HealthLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/GridContainer/HealthContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "4"
